@@ -92,6 +92,7 @@ doread()
     "100% goblin hair - do not wash",
     "Aim >>> <<< here",
     "cK -- Cockatrice touches the Kop",
+    "Croesus for President 2008 - Campaign Finance Reform Now (for the other guy)",
     "Don't ask me, I only adventure here",
     "Down With Pants!",
     "Gehennoms Angels",
@@ -106,11 +107,16 @@ doread()
     "I Am Not a Pack Rat - I Am a Collector",
     "I bounced off a rubber tree",
     "If you can read this, I can hit you with my polearm",
+    "I'm Confused!",
+    "I met Carl, the swordmaster of Jambalaya island and all I got was this lousy t-shirt",
+    "I scored with the princess",
     "I Support Single Succubi",
     "I want to live forever or die in the attempt.",
     "Kop Killaz",
     "Lichen Park",
     "LOST IN THOUGHT - please send search party",
+    "Meat Is Mordor",
+    "Minetown Better Business Bureau",
     "Minetown Watch",
     "Ms. Palm's House of Negotiable Affection -- A Very Reputable House Of Disrepute",
     "^^  My eyes are up there!  ^^",
@@ -124,7 +130,9 @@ doread()
     "The Hellhound Gang",
     "The Werewolves",
     "They Might Be Storm Giants",
+    "Up with miniskirts!",
     "Weapons don't kill people, I kill people",
+    "Where's the beef?",
     "White Zombie",
     "Worship me",
     "You laugh because I'm different, I laugh because you're about to die",
@@ -132,6 +140,10 @@ doread()
     "Anhur State University - Home of the Fighting Fire Ants!",
     "FREE HUGS",
     "Serial Ascender",
+    "Plunder Island Brimstone Beach Club",
+    "Real Men Are Valkyries",
+    "Young Men's Cavedigging Association",
+    "Occupy Fort Ludios",
     "I couldn't afford this T-shirt so I stole it!",
     "End Mercantile Opacity Discrimination Now: Let Invisible Customers Shop!",
     "Elvira's House O'Succubi, granting the gift of immorality!",
