@@ -23,6 +23,7 @@
 	* Now anybody may tame monkeys and apes with bananas (from Sporkhack - https://github.com/Bulwersator/CopyOfSporkHack/commit/bd4c2299a9250c30be75ec225fee9014dcd3ccbe and https://github.com/Bulwersator/CopyOfSporkHack/commit/cbda4727b965d1942e3065cd79f561af3f63040f )
 	* More random gravestone epitaphs (from NAO)
 	* New hallucinatory monsters
+	* More t-shirt messages from NAO
 
 2012-04-01  UnNetHack 4.0.0
 	* Uncursed and blessed scrolls of magic mapping reveal secret doors
